css/main.css
/* Base */
body, html{
  height:100%;
}
body{
  background-color: #3498db;
  color: #fff;
  font-family: 'Lato', sans-serif;
}
li{
  list-style: none;
}
h1, h2, h3, h4, h5{
  color: #3283b6;
  padding:0;
}
h1.subtitle, h2.subtitle, h3.subtitle, h4.subtitle, h5.subtitle{
  color: #222;
  font-size:200%;
}
.alternate{
  background-color: #ecf0f1;
  color: #222;
  padding-top: 4em;
  padding-bottom: 4em
}
.love{
  color: #e70006;
}
/* Title */
.title{
  height:100%;
  position:relative;
}
.title .cloud{
  height:260px;
  position: absolute;
  top: 50%;
  margin-top: -130px;
}
.title h1{
  font-family: 'Lily Script One', cursive;
  color: #fff;
  font-size:350%; 
}
.title .scroll-down{
  position:absolute;
  font-size:150%;
  width:100%;
  bottom:20px;
}
/* Message */
.message h1{
  font-family: 'Oswald', sans-serif;
  font-size:350%;
}
.message h1,h2{
  text-align:center;
}
.message p {
  margin-top: 75px;
}
.message .separator{
  margin-top:50px;
}

/* Features*/
.features .columns{
  text-align:center;
}
.features .panel{
  border: 0;
  background: none;
  text-transform: uppercase;
  color: #3283b6;
}
/* Separator */
.separator, .footer{
  background: #222;
  height:50px;
}

/* Footer */
.footer {
  padding-top: 20px;
  padding-bottom:50px;
}

/* Cloud */
#cloud {
  width: 350px; height: 120px;
  color: #3498db;
  text-align:center;
  line-height:120px;
  background: #fff;
  border-radius: 100px;
  -webkit-border-radius: 100px;
  -moz-border-radius: 100px;
  position: relative;
  margin: 120px auto 20px;
}

#cloud:after, #cloud:before {
  content: '';
  position: absolute;
  background:#fff;
  z-index: -1
}

#cloud:after {
  width: 100px; height: 100px;
  top: -50px; left: 50px;
  
  border-radius: 100px;
  -webkit-border-radius: 100px;
  -moz-border-radius: 100px;
}

#cloud:before {
  width: 180px; height: 180px;
  top: -90px; right: 50px;
  
  border-radius: 200px;
  -webkit-border-radius: 200px;
  -moz-border-radius: 200px;
}

